2010-08-20 - 0.0.33 - Nils K. Windisch
	* a title tag for links
2010-08-30 - 0.0.34 - Nils K. Windisch
	* Bug Fix: menu open and pages on fourth level selected
2010-09-09 - 0.0.36 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
	* bug fix in ext_emconf.php
2010-09-22 - 0.0.37 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
	* HTML fix
2010-10-25 - 0.0.38 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
	* Bugfix WWW-319
2010-11-08 - 0.0.39 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
	* Infobx überarbeiten WWW-316
2010-11-08 - 0.0.40 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
	* Infobx überarbeiten WWW-316