@@ -91,6 +91,11 @@ $tempColumns = array(
 		'label' => 'LLL:EXT:nkwsubmenu/locallang_db.xml:pages.tx_nkwsubmenu_usecontent', 
 		'config' => array('type' => 'check')
 	),
+	'tx_nkwsubmenu_showsidebar' => array(
+		'exclude' => 1, 
+		'label' => 'LLL:EXT:nkwsubmenu/locallang_db.xml:pages.tx_nkwsubmenu_showsidebar', 
+		'config' => array('type' => 'check')
+	),
 	'tx_nkwsubmenu_knotheader' => array(
 		'exclude' => 1, 
 		'label' => 'LLL:EXT:nkwsubmenu/locallang_db.xml:pages.tx_nkwsubmenu_knotheader', 
@@ -109,5 +114,5 @@ $tempColumns = array(
 );
 t3lib_div::loadTCA('pages');
 t3lib_extMgm::addTCAcolumns('pages', $tempColumns, 1);
-t3lib_extMgm::addToAllTCAtypes('pages', 'tx_nkwsubmenu_in_menu;;;;1-1-1,tx_nkwsubmenu_picture,tx_nkwsubmenu_picture_follow,tx_nkwsubmenu_picture_nofollow,tx_nkwsubmenu_knot,tx_nkwsubmenu_usecontent,tx_nkwsubmenu_knotheader');
+t3lib_extMgm::addToAllTCAtypes('pages', 'tx_nkwsubmenu_in_menu;;;;1-1-1,tx_nkwsubmenu_picture,tx_nkwsubmenu_picture_follow,tx_nkwsubmenu_picture_nofollow,tx_nkwsubmenu_knot,tx_nkwsubmenu_usecontent,tx_nkwsubmenu_showsidebar,tx_nkwsubmenu_knotheader');
 ?>
