@@ -9,6 +9,7 @@ CREATE TABLE pages (
 	tx_nkwsubmenu_picture_nofollow tinyint(3) DEFAULT '0' NOT NULL
 	tx_nkwsubmenu_knot tinyint(3) DEFAULT '0' NOT NULL
 	tx_nkwsubmenu_usecontent tinyint(3) DEFAULT '0' NOT NULL
+	tx_nkwsubmenu_showsidebar tinyint(3) DEFAULT '1' NOT NULL
 	tx_nkwsubmenu_hideinfobox tinyint(3) DEFAULT '0' NOT NULL
 	tx_nkwsubmenu_knotheader blob NOT NULL
 );
